docs: update documents

--- a/Website/ClientApp/src/app/home/home.component.html
+++ b/Website/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="doc-container">
   <h1>About this site</h1>
   <p>
-    このサイトは、私が学習したソフトウェア開発に関する知識をまとめ、後で振り返って思い出すために作成しました。
+    このサイトは、私が学習したソフトウェア開発に関する知識をまとめ、後で振り返って思い出す事を目的に
+    作成されました。
   </p>
   <p>
     Angularと.NET
