--- a/Website/ClientApp/src/app/document/document.component.html
+++ b/Website/ClientApp/src/app/document/document.component.html
@@ -2,14 +2,13 @@
   <!-- <p *ngIf="!docInfo">loading...</p> -->
   <ng-container *ngIf="docInfo && docInfo?.toc === 'none'">
     <app-doc-header [docInfo]="docInfo"></app-doc-header>
-    <div fxFlex class="doc-body" [innerHTML]="docInfo?.safeBody" appRouteTransformer></div>
+    <div #mdContent fxFlex class="doc-body" appRouteTransformer></div>
   </ng-container>
   <ng-container *ngIf="docInfo && docInfo?.toc !== 'none'">
     <div fxLayout="row">
       <div fxFlex="1 1 85%" fxFlex.lt-md="1 1 100%">
         <div fxLayout="column">
           <app-doc-header [docInfo]="docInfo"></app-doc-header>
-          <!-- <div  fxFlex class="doc-body" [innerHTML]="docInfo?.safeBody" appRouteTransformer></div> -->
           <div #mdContent fxFlex class="doc-body" appRouteTransformer></div>
         </div>
       </div>
