--- a/TechLogAngularStandalone/src/styles.scss
+++ b/TechLogAngularStandalone/src/styles.scss
@@ -9,8 +9,21 @@
 
 // // TODO: list up required components instead of using all-component-themes
 // // Emit theme-dependent styles for common features used across multiple components.
-// @include mat.core-theme($light-theme);
-@include mat.all-component-themes($light-theme);
+// @include mat.all-component-themes($light-theme);
+@include mat.core-theme($light-theme);
+@include mat.autocomplete-theme($light-theme);
+@include mat.button-theme($light-theme);
+@include mat.card-theme($light-theme);
+@include mat.chips-theme($light-theme);
+@include mat.expansion-theme($light-theme);
+@include mat.form-field-theme($light-theme);
+@include mat.icon-theme($light-theme);
+@include mat.input-theme($light-theme);
+@include mat.list-theme($light-theme);
+@include mat.progress-bar-theme($light-theme);
+@include mat.select-theme($light-theme);
+@include mat.sidenav-theme($light-theme);
+@include mat.toolbar-theme($light-theme);
 
 html,
 body {
