refactor: setup color variables

--- a/TechLogAngularStandalone/src/styles.scss
+++ b/TechLogAngularStandalone/src/styles.scss
@@ -7,7 +7,7 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core($light-typograhy);
 
-// // TODO: list up required components instead of using all-component-themes
+// // list up required components instead of using all-component-themes
 // // Emit theme-dependent styles for common features used across multiple components.
 // @include mat.all-component-themes($light-theme);
 @include mat.core-theme($light-theme);
@@ -41,15 +41,15 @@ img {
 }
 
 .secondary-text {
-  color: mat.get-color-from-palette($foreground, secondary-text);
+  color: $color-foreground-secondary-text;
 }
 
 .hint-text {
-  color: mat.get-color-from-palette($foreground, hint-text);
+  color: $color-foreground-hint-text;
 }
 
 .disabled-text {
-  color: mat.get-color-from-palette($foreground, disabled-text);
+  color: $color-foreground-disabled-text;
 }
 
 .about-me {
