--- a/TechLogAngularStandalone/src/_variables.scss
+++ b/TechLogAngularStandalone/src/_variables.scss
@@ -3,22 +3,22 @@
 @use "sass:map";
 @use "@angular/material" as mat;
 
-$light-primary: mat.define-palette(mat.$light-blue-palette, 500);
-$light-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$light-primary-palette: mat.define-palette(mat.$light-blue-palette, 500);
+$light-accent-palette: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $light-typograhy: mat.define-typography-config(
   $font-family: "Noto Sans JP",
 );
 
 // The "warn" palette is optional and defaults to red if not specified.
-$light-warn: mat.define-palette(mat.$red-palette);
+$light-warn-palette: mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $light-theme: mat.define-light-theme(
   (
     color: (
-      primary: $light-primary,
-      accent: $light-accent,
-      warn: $light-warn,
+      primary: $light-primary-palette,
+      accent: $light-accent-palette,
+      warn: $light-warn-palette,
     ),
     typography: $light-typograhy,
   )
@@ -27,5 +27,34 @@ $light-theme: mat.define-light-theme(
 $color-config: mat.get-color-config($light-theme);
 $is-dark-theme: map.get($color-config, "is-dark");
 $foreground: map.get($color-config, foreground);
+$background: map.get($color-config, background);
+$gray-palette: mat.define-palette(mat.$grey-palette);
 
-$gray: mat.define-palette(mat.$grey-palette, 500);
+// primary color
+$primary: mat.get-color-from-palette($light-primary-palette);
+$primary-lighter: mat.get-color-from-palette($light-primary-palette, lighter);
+$primary-darker: mat.get-color-from-palette($light-primary-palette, darker);
+
+// accent color
+$accent: mat.get-color-from-palette($light-accent-palette);
+$accent-lighter: mat.get-color-from-palette($light-accent-palette, lighter);
+$accent-darker: mat.get-color-from-palette($light-accent-palette, darker);
+
+// warn color
+$warn: mat.get-color-from-palette($light-warn-palette);
+
+// gray color
+$gray: mat.get-color-from-palette($gray-palette);
+$gray-lighter: mat.get-color-from-palette($gray-palette, lighter);
+$gray-darker: mat.get-color-from-palette($gray-palette, darker);
+$gray-300: mat.get-color-from-palette($gray-palette, 300);
+$gray-600: mat.get-color-from-palette($gray-palette, 600);
+
+// text color
+$color-foreground-text: mat.get-color-from-palette($foreground, text);
+$color-foreground-secondary-text: mat.get-color-from-palette($foreground, secondary-text);
+$color-foreground-hint-text: mat.get-color-from-palette($foreground, hint-text);
+$color-foreground-disabled-text: mat.get-color-from-palette($foreground, disabled-text);
+
+// background color
+$color-background: mat.get-color-from-palette($background, background);
