refactor: update tag and loadingbar components to standalone

--- a/TechLogAngularStandalone/src/app/shared/components/tags/tag-list/tag-list.component.html
+++ b/TechLogAngularStandalone/src/app/shared/components/tags/tag-list/tag-list.component.html
@@ -1,5 +1,5 @@
-<mat-chip-list *ngIf="tags">
+<mat-chip-listbox *ngIf="tags">
   <ng-container *ngFor="let tag of tags">
     <app-tag [value]="tag"></app-tag>
   </ng-container>
-</mat-chip-list>
+</mat-chip-listbox>
