--- a/TechLogAngularStandalone/src/app/markdown-document/search/search.component.scss
+++ b/TechLogAngularStandalone/src/app/markdown-document/search/search.component.scss
@@ -1,6 +1,7 @@
 @use "@angular/material" as mat;
 @import "variables";
 
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 ::ng-deep .mat-form-field-suffix {
   top: 0px !important;
 }
