--- a/TechLogAngularStandalone/src/app/shared/components/tags/tag/tag.component.html
+++ b/TechLogAngularStandalone/src/app/shared/components/tags/tag/tag.component.html
@@ -1,3 +1,3 @@
-<mat-chip color="primary" (click)="searchByTag($event)" class="tag-item">
+<mat-chip-option color="primary" (click)="searchByTag($event)" class="tag-item">
   {{ value }}
-</mat-chip>
+</mat-chip-option>
