--- a/TechLogAngularStandalone/src/styles.scss
+++ b/TechLogAngularStandalone/src/styles.scss
@@ -14,29 +14,39 @@
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy($light-typograhy);`
 // @include mat.all-legacy-component-typographies($light-typograhy);
-@include mat.legacy-core();
+// @include mat.legacy-core();
+@include mat.core();
 
 // // list up required components instead of using all-component-themes
 // // Emit theme-dependent styles for common features used across multiple components.
 // @include mat.all-component-themes($light-theme);
-@include mat.legacy-core-theme($light-theme);
-@include mat.legacy-autocomplete-theme($light-theme);
-@include mat.legacy-button-theme($light-theme);
-@include mat.legacy-card-theme($light-theme);
-@include mat.legacy-chips-theme($light-theme);
-@include mat.expansion-theme($light-theme);
-@include mat.legacy-form-field-theme($light-theme);
-@include mat.icon-theme($light-theme);
-@include mat.legacy-input-theme($light-theme);
-@include mat.legacy-list-theme($light-theme);
+// @include mat.legacy-core-theme($light-theme);
+// @include mat.legacy-autocomplete-theme($light-theme);
+// @include mat.legacy-button-theme($light-theme);
+// @include mat.legacy-card-theme($light-theme);
+// @include mat.legacy-chips-theme($light-theme);
+// @include mat.expansion-theme($light-theme);
+// @include mat.legacy-form-field-theme($light-theme);
+// @include mat.icon-theme($light-theme);
+// @include mat.legacy-input-theme($light-theme);
+// @include mat.legacy-list-theme($light-theme);
+// @include mat.legacy-progress-bar-theme($light-theme);
+// @include mat.legacy-select-theme($light-theme);
 
-@include mat.legacy-select-theme($light-theme);
+@include mat.core-theme($light-theme);
+@include mat.autocomplete-theme($light-theme);
+@include mat.button-theme($light-theme);
+@include mat.card-theme($light-theme);
+@include mat.chips-theme($light-theme);
+@include mat.expansion-theme($light-theme);
+@include mat.form-field-theme($light-theme);
+@include mat.icon-theme($light-theme);
+@include mat.input-theme($light-theme);
+@include mat.list-theme($light-theme);
+@include mat.progress-bar-theme($light-theme);
+@include mat.select-theme($light-theme);
 @include mat.sidenav-theme($light-theme);
 @include mat.toolbar-theme($light-theme);
-
-@include mat.core();
-@include mat.chips-theme($light-theme);
-@include mat.progress-bar-theme($light-theme);
 
 html,
 body {
