refactor: update home, search and display markdown component to standalone

--- a/TechLogAngularStandalone/src/app/home/home.component.scss
+++ b/TechLogAngularStandalone/src/app/home/home.component.scss
@@ -63,6 +63,14 @@ svg#rocket-smoke {
   z-index: -10;
 }
 
+svg#clouds {
+  position: fixed;
+  bottom: -160px;
+  left: -230px;
+  z-index: -10;
+  width: 1920px;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
   .card.highlight-card span {
