--- a/TechLogAngularStandalone/src/app/shared/components/markdown/document-toc/document-toc.component.html
+++ b/TechLogAngularStandalone/src/app/shared/components/markdown/document-toc/document-toc.component.html
@@ -1,4 +1,4 @@
-<div class="toc-container">
+<div class="toc-container mat-typography">
   <div class="toc-title mat-caption">Table of Content</div>
   <ul class="toc-list" *ngIf="tocList">
     <ng-container *ngFor="let toc of tocList; let i = index">
