--- a/TechLogAngularStandalone/src/app/markdown-document/search/search.component.html
+++ b/TechLogAngularStandalone/src/app/markdown-document/search/search.component.html
@@ -36,15 +36,10 @@
         (click)="updateViewType(viewTypeModel.expansion)"
       ></mat-icon>
     </div>
-    <div *ngIf="documents$ | async as documents">
+    <div *ngIf="documents$ | async as documents" class="doc-count-container">
       {{ documents?.length && documents.length > 0 ? documents.length : "No" }} doc(s) found
     </div>
-    <mat-form-field
-      class="search-options-sort-form"
-      appearance="fill"
-      [formGroup]="searchForm"
-      [style.fontSize.px]="14"
-    >
+    <mat-form-field class="search-options-sort-form" appearance="fill" [formGroup]="searchForm">
       <mat-label>Sort</mat-label>
       <mat-select formControlName="searchOptionForm">
         <mat-option *ngFor="let option of sortByOptions" [value]="option.key">
@@ -75,7 +70,7 @@
 >
   <div class="search-advanced-overlay">
     <div><mat-label>Advances Search Options</mat-label></div>
-    <mat-form-field class="autocomplete-input" appearance="outline" [formGroup]="searchForm" [style.fontSize.px]="12">
+    <mat-form-field class="autocomplete-input" appearance="outline" [formGroup]="searchForm" [style.fontSize.px]="14">
       <mat-label class="autocomplete">Categories</mat-label>
       <input
         matInput
