--- a/TechLogAngularStandalone/src/app/shared/components/lists/document-list-item/document-list-item.component.scss
+++ b/TechLogAngularStandalone/src/app/shared/components/lists/document-list-item/document-list-item.component.scss
@@ -5,6 +5,11 @@
   min-height: 48px;
   height: auto !important;
 
+  p {
+    margin-block-start: 0.75em;
+    margin-block-end: 0.75em;
+  }
+
   .list-item-date {
     float: right;
   }
