--- a/TechLogAngularStandalone/src/app/shared/components/tags/tag/tag.component.scss
+++ b/TechLogAngularStandalone/src/app/shared/components/tags/tag/tag.component.scss
@@ -1,7 +1,5 @@
 .mat-mdc-standard-chip {
-  height: auto !important;
-  min-height: auto !important;
-  padding: 2px 12px 4px 12px !important;
+  height: 24px !important;
 }
 
 .mat-mdc-chip {
