--- a/TechLogAngularStandalone/src/styles.scss
+++ b/TechLogAngularStandalone/src/styles.scss
@@ -5,34 +5,11 @@
 
 // Include the common styles for Angular Material.
 // Be sure that you only ever include this mixin once!
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy($light-typograhy);`
-// @include mat.all-legacy-component-typographies($light-typograhy);
-// @include mat.legacy-core();
 @include mat.core();
 
 // // list up required components instead of using all-component-themes
 // // Emit theme-dependent styles for common features used across multiple components.
 // @include mat.all-component-themes($light-theme);
-// @include mat.legacy-core-theme($light-theme);
-// @include mat.legacy-autocomplete-theme($light-theme);
-// @include mat.legacy-button-theme($light-theme);
-// @include mat.legacy-card-theme($light-theme);
-// @include mat.legacy-chips-theme($light-theme);
-// @include mat.expansion-theme($light-theme);
-// @include mat.legacy-form-field-theme($light-theme);
-// @include mat.icon-theme($light-theme);
-// @include mat.legacy-input-theme($light-theme);
-// @include mat.legacy-list-theme($light-theme);
-// @include mat.legacy-progress-bar-theme($light-theme);
-// @include mat.legacy-select-theme($light-theme);
-
 @include mat.core-theme($light-theme);
 @include mat.autocomplete-theme($light-theme);
 @include mat.button-theme($light-theme);
@@ -47,6 +24,7 @@
 @include mat.select-theme($light-theme);
 @include mat.sidenav-theme($light-theme);
 @include mat.toolbar-theme($light-theme);
+@include mat.all-component-typographies($light-typograhy);
 
 html,
 body {
